AC_INIT(mftrace.py)
AC_CONFIG_HEADER(config.h:config.h.in)

AC_PATH_PROG(PYTHON, ${PYTHON:-python}, -echo no python)
AC_SUBST(PYTHON)

export VERSION="1.0.29"

AC_SUBST(VERSION)

AC_C_BIGENDIAN

AC_OUTPUT(GNUmakefile:GNUmakefile.in mftrace:mftrace.py mftrace.spec:mftrace.spec.in)

chmod a-w GNUmakefile mftrace
chmod a+x mftrace
