AC_INIT(mftrace.py)
AC_CONFIG_HEADER(config.h:config.h.in)

AC_PATH_PROG(PYTHON, ${PYTHON:-python}, -echo no python)
AC_PATH_PROG(AUTOTRACE, autotrace, none)
AC_PATH_PROG(POTRACE, potrace, none)
AC_SUBST(PYTHON)

if test "$POTRACE" = "none" -a "$AUTOTRACE" = "none"  ; then
    echo ''
    echo ' ERROR: install potrace or autotrace' 
    echo ''
    exit 1
fi 
	
export VERSION="1.1.6"

AC_SUBST(VERSION)
AC_SUBST(EXEEXT)

AC_C_BIGENDIAN

AC_OUTPUT(GNUmakefile:GNUmakefile.in mftrace:mftrace.py mftrace.spec:mftrace.spec.in)

chmod a-w GNUmakefile mftrace
chmod a+x mftrace

