AC_INIT(mftrace.py)
AC_CONFIG_HEADER(config.h:config.h.in)

AC_PATH_PROG(PYTHON, ${PYTHON:-python}, -echo no python)
AC_PATH_PROG(AUTOTRACE, autotrace, none)
AC_PATH_PROG(POTRACE, potrace, none)
AC_SUBST(PYTHON)

export VERSION="1.2.18"

AC_SUBST(VERSION)
AC_SUBST(EXEEXT)

AC_C_BIGENDIAN

AC_OUTPUT(GNUmakefile:GNUmakefile.in mftrace:mftrace.py mftrace.spec:mftrace.spec.in)

chmod a-w GNUmakefile mftrace
chmod a+x mftrace


if test "$POTRACE" = "none" -a "$AUTOTRACE" = "none"  ; then
    echo '' 
    echo '' 
    echo '' 
    echo ' **************************************************'
    echo ' WARNING: you need potrace or autotrace for running' 
    echo ' **************************************************'
    echo ''
    exit 2
fi
	
